<resources>
    <string name="app_name" translatable="false">SheLi</string>
    <string name="shop_list_activity_init_data_message">Adding most popular products and categories</string>
    <string name="shop_list_activity_init_data_confirm_title">Fill default data</string>
    <string name="shop_list_activity_init_data_confirm_message">
        Do you want to add most popular products and categories?
    </string>
    <string name="shop_activity_synchronization_start_failed">
        Failed to start synchronization, try to re-log in
    </string>
    <string name="edit_product_name_field_label">Name</string>
    <string name="edit_product_units_field_label">Default units of measure</string>
    <string name="edit_product_categories_label">Linked categories</string>
    <string name="edit_product_save_button_label">Save</string>
    <string name="edit_product_delete_button_description">Delete product</string>
    <string name="edit_product_period_count_label">How often</string>
    <string name="unit_shot_items_title">To buy</string>
    <string name="fast_creation_name_hint">New</string>
    <string name="unit_select_shopitems_search_hint">Search</string>
    <string name="unit_shopitems_list_add_hint">Add item</string>
    <string name="unit_shopitem_list_copied_into_clipboard">The list was copied to clipboard</string>
    <string name="unit_shopitem_list_copy_clipboard_label">To buy list</string>
    <string name="unit_shop_item_list_finished_shopping">Congratulations!\nYou have finished your shopping!</string>
    <string name="unit_shop_item_list_need_something">Need something?</string>
    <string name="unit_shop_item_list_check_all_products">Going to a shop?\nCheck all products</string>
    <string name="unit_shop_item_list_list_is_empty">Your shopping list is empty</string>
    <string name="unit_shop_item_list_no_filter_matches">No matches found for the filter</string>
    <string name="fast_creation_add_and_edit">Add and edit</string>
    <string name="unit_products_search_hint">Search</string>
    <string name="unit_products_search_icon">Search icon</string>
    <string name="unit_categories_list_title">%s categories</string>
    <string name="unit_edit_product_title">Edit %s</string>
    <string name="unit_edit_product_new_product">new product</string>
    <plurals name="unit_categories_unlink_confirmation">
        <item quantity="one">Unlink linked product?</item>
        <item quantity="other">Unlink %1$d products?</item>
    </plurals>
    <string name="category_already_exists">%s already exists</string>
    <string name="categories_unit_already_exists_on_edit">%s already exists, won\'t save</string>
    <string name="categories_unit_empty_on_edit">Empty name is not allowed</string>
    <string name="products_unit_already_exists">%s already exists</string>
    <string name="products_unit_delete_from_cart">Delete it from the cart?</string>
    <string name="shop_item_already_exists">%s already exists</string>
    <string name="fast_creation_add_button_hint">Add</string>
    <string name="unit_products_title">Products</string>
    <string name="unit_settings_title">Settings</string>
    <string name="unit_about_title">About</string>
    <string name="unit_about_logo_description">SheLi logo</string>
    <string name="unit_categories_title">Categories</string>
    <string name="quantity_editor_title">%s quantity</string>
    <string name="quantity_editor_title_with_units">%1$s quantity (%2$s)</string>
    <string name="logo_image_description">Logo image</string>
    <string name="toolbar_menu_button">Menu</string>
    <string name="unit_about_us">We, Anna and Iaroslav, are always glad to get your feedback</string>
    <string name="unit_about_app">SheLi is your assistant in weekly shopping</string>
    <string name="version_pattern" translatable="false">v%s</string>
    <string name="unit_edit_category_name_label">Name</string>
    <string name="unit_edit_category_color_label">Color</string>
    <string name="unit_edit_category_products_label">Linked products</string>
    <string name="unit_edit_category_title">Edit %s</string>
    <string name="unit_edit_category_new_category">new category</string>
    <string name="unit_edit_category_empty_name_not_allowed">Empty name is not allowed</string>
    <string name="unit_edit_product_empty_name_not_allowed">Empty name is not allowed</string>
    <string name="cell_selectable_shop_item_comment_hint">Comment</string>
    <string name="unit_edit_shop_item_name_field_label">Name</string>
    <string name="unit_edit_shop_item_comment_label">Comment</string>
    <string name="unit_edit_shop_item_title">Edit %s</string>
    <string name="unit_edit_shop_item_quantity_field_label">Quantity</string>
    <string name="unit_edit_shop_item_units_field_label">Units of measure</string>
    <string name="unit_edit_shop_item_product_info_label">Product info</string>
    <string name="cell_search_product_new">new</string>
    <string name="unit_shopitem_not_specified_quantity">Not specified</string>
    <string name="clear_selected_catetories_in_filter">Clear</string>
    <string name="unit_create_shopitems_select_products">Select new products</string>
    <string name="unit_of_measure_kg">Kilogram</string>
    <string name="unit_of_measure_gram">Gram</string>
    <string name="unit_of_measure_liter">Liter</string>
    <string name="unit_of_measure_bottle">Bottle</string>
    <string name="unit_of_measure_pack">Pack</string>
    <string name="unit_of_measure_piece">Piece</string>
    <string name="unit_of_measure_kg_short">kg</string>
    <string name="unit_of_measure_gram_short">g</string>
    <string name="unit_of_measure_liter_short">l</string>
    <string name="unit_of_measure_bottle_short">btl</string>
    <string name="unit_of_measure_pack_short">p</string>
    <string name="unit_of_measure_piece_short">pc</string>
    <plurals name="period_type_days">
        <item quantity="one">Day</item>
        <item quantity="other">Days</item>
    </plurals>
    <plurals name="period_type_weeks">
        <item quantity="one">Week</item>
        <item quantity="other">Weeks</item>
    </plurals>
    <plurals name="period_type_months">
        <item quantity="one">Month</item>
        <item quantity="other">Months</item>
    </plurals>
    <plurals name="period_type_years">
        <item quantity="one">Year</item>
        <item quantity="other">Years</item>
    </plurals>
    <string name="today">today</string>
    <string name="days_ago">%sd ago</string>
    <string name="weeks_ago">%sw ago</string>
    <string name="months_ago">%sm ago</string>
    <plurals name="years_ago">
        <item quantity="one">%dy ago</item>
        <item quantity="other">%dy ago</item>
    </plurals>
    <string name="long_ago">long ago</string>
    <string name="categories_spinner_all">All</string>
    <string name="language_en" translatable="false">English</string>
    <string name="language_ru" translatable="false">Русский</string>
    <string name="unit_settings_language_hint">App language</string>
    <string name="unit_settings_system_language">Automatic</string>
    <string name="material_spinner_default_null_string">None</string>
    <string name="default_product_apples">Apples</string>
    <string name="default_product_bacon">Bacon</string>
    <string name="default_product_bananas">Bananas</string>
    <string name="default_product_beans">Beans</string>
    <string name="default_product_beef">Beef</string>
    <string name="default_product_bread">Bread</string>
    <string name="default_product_buckwheat">Buckwheat</string>
    <string name="default_product_butter">Butter</string>
    <string name="default_product_cabbage">Cabbage</string>
    <string name="default_product_carrots">Carrots</string>
    <string name="default_product_cheese">Cheese</string>
    <string name="default_product_chicken">Chicken</string>
    <string name="default_product_chips">Chips</string>
    <string name="default_product_chocolate">Chocolate</string>
    <string name="default_product_coffee">Coffee</string>
    <string name="default_product_corn">Corn</string>
    <string name="default_product_cucumber">Cucumber</string>
    <string name="default_product_eggs">Eggs</string>
    <string name="default_product_fish">Fish</string>
    <string name="default_product_flour">Flour</string>
    <string name="default_product_garlic">Garlic</string>
    <string name="default_product_honey">Honey</string>
    <string name="default_product_juice">Juice</string>
    <string name="default_product_ketchup">Ketchup</string>
    <string name="default_product_lemon">Lemon</string>
    <string name="default_product_mayo">Mayo</string>
    <string name="default_product_milk">Milk</string>
    <string name="default_product_mushrooms">Mushrooms</string>
    <string name="default_product_onion">Onion</string>
    <string name="default_product_oil">Oil</string>
    <string name="default_product_oranges">Oranges</string>
    <string name="default_product_pepper">Pepper</string>
    <string name="default_product_pork">Pork</string>
    <string name="default_product_potato">Potato</string>
    <string name="default_product_rice">Rice</string>
    <string name="default_product_salt">Salt</string>
    <string name="default_product_shampoo">Shampoo</string>
    <string name="default_product_soap">Soap</string>
    <string name="default_product_spaghetti">Spaghetti</string>
    <string name="default_product_sugar">Sugar</string>
    <string name="default_product_sweets">Sweets</string>
    <string name="default_product_tea">Tea</string>
    <string name="default_product_toilet_paper">Toilet paper</string>
    <string name="default_product_tomatoes">Tomatoes</string>
    <string name="default_product_toothpaste">Toothpaste</string>
    <string name="default_category_food">Food</string>
    <string name="default_category_household_chemicals">Household chemicals</string>
    <string name="crash_dialog_send_report_button">Send a report</string>
    <string name="crash_dialog_close">Close</string>
    <string name="crash_dialog_restart">Restart</string>
    <string name="crash_dialog_error_occurred">Oops, unexpected error occurred</string>
    <string name="crash_dialog_image_description">Crash image</string>
    <string name="unit_auth_log_out">Log out</string>
    <string name="please_log_in">Please log in:</string>
    <string name="unit_sharing_title">Share and sync</string>
    <string name="unit_sharing_friends_email">Friend\'s email</string>
    <string name="unit_sharing_share_button">Share</string>
    <string name="unit_sharing_unshare_button">Unshare</string>
    <string name="unit_auth_authorized_label">Unauthorized</string>
    <string name="unit_login_log_in_with_google">Log in with Google</string>
    <string name="unit_login_log_in_with_email">Log in with Email</string>
    <string name="unit_login_auth_failed">Authentication failed</string>
    <string name="unit_auth_email_log_in">Log in</string>
    <string name="unit_auth_email_register">Register</string>
    <string name="unit_auth_email_address_field">E-mail address</string>
    <string name="unit_auth_email_password_field">Password</string>
    <string name="unit_auth_email_registration_error_default">Registration failed</string>
    <string name="unit_auth_email_registration_error_already_registered">This email already registered</string>
    <string name="unit_auth_email_registration_error_invalid_email">Email format is invalid</string>
    <string name="unit_sharing_verification_unverified_label">
        Verification email was sent, verify your address and refresh current screen
    </string>
    <string name="unit_sharing_verification_refresh_screen">Refresh</string>
    <string name="unit_sharing_verification_resend_verification">Resend verification email</string>
    <string name="unit_sharing_share_list_label">Share list</string>
</resources>