<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/logo"
            android:contentDescription="@string/unit_about_logo_description"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textSize="@dimen/large_font_size" />

            <TextView
                android:id="@+id/unit_about_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                tools:text="v1.0.0" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/unit_about_app" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/unit_about_us" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autoLink="web"
        android:text="GitHub: https://github.com/bugy/SheLi"
        tools:ignore="HardcodedText"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autoLink="email"
        android:text="email: buggygm@gmail.com"
        tools:ignore="HardcodedText"/>

    <LinearLayout
        android:id="@+id/unit_about_debug_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:gravity="center"
        android:layout_marginTop="24dp">

        <Button
            android:id="@+id/unit_about_exception_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Exception"
            tools:ignore="ButtonStyle,HardcodedText"/>

        <Button
            android:id="@+id/unit_about_send_logs_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            tools:ignore="ButtonStyle,HardcodedText"
            android:text="Send logs"/>

    </LinearLayout>

</LinearLayout>