<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingEnd="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingStart="12dp">

            <EditText
                android:id="@+id/unit_edit_category_name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|start"
                android:hint="@string/unit_edit_category_name_label"
                android:imeOptions="actionDone"
                android:inputType="textNoSuggestions"
                android:maxLines="1"
                tools:text="Fruits" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            style="@style/FieldRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingStart="16dp">

            <TextView
                style="@style/FieldLabel"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:text="@string/unit_edit_category_color_label" />

            <net.buggy.components.TagFlag
                android:id="@+id/unit_edit_category_color_field"
                android:layout_width="22dp"
                android:layout_height="26dp" />
        </LinearLayout>

        <TextView
            style="@style/FieldLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:text="@string/unit_edit_category_products_label" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/unit_edit_category_products_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp" />
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/unit_edit_category_button_accept"
        style="@style/Widget.Design.FloatingActionButton.AtBottom"
        android:src="@drawable/ic_check_white_24dp"
        android:layout_gravity="bottom|end" />

</android.support.design.widget.CoordinatorLayout>