<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="24dp">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:paddingEnd="12dp"
                        android:paddingLeft="12dp"
                        android:paddingRight="12dp"
                        android:paddingStart="12dp">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/unit_edit_shop_item_name_field"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/unit_edit_shop_item_name_field_label"
                            android:textColor="@color/color_text"
                            tools:text="Apples" />
                    </android.support.design.widget.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal"
                        android:paddingEnd="12dp"
                        android:paddingLeft="12dp"
                        android:paddingRight="12dp"
                        android:paddingStart="12dp">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.4"
                            android:paddingEnd="8dp"
                            android:paddingRight="8dp">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/unit_edit_shop_item_quantity_field"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:focusable="false"
                                android:gravity="end"
                                android:hint="@string/unit_edit_shop_item_quantity_field_label"
                                tools:text="0.3" />
                        </android.support.design.widget.TextInputLayout>

                        <net.buggy.components.spinners.MaterialSpinner
                            android:id="@+id/unit_edit_shop_item_units_field"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.6"
                            android:paddingLeft="8dp"
                            android:paddingStart="8dp" />

                    </LinearLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:paddingEnd="12dp"
                        android:paddingLeft="12dp"
                        android:paddingRight="12dp"
                        android:paddingStart="12dp">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/unit_edit_shop_item_comment_field"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/unit_edit_shop_item_comment_label"
                            android:imeOptions="actionDone"
                            android:inputType="textAutoComplete"
                            android:maxLength="30"
                            android:maxLines="1"
                            tools:text="buy a couple" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                card_view:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:paddingEnd="16dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:paddingStart="16dp"
                        android:text="@string/unit_edit_shop_item_product_info_label"
                        android:textColor="?android:textColorSecondary"
                        android:textSize="@dimen/title_font_size" />

                    <include layout="@layout/merge_edit_product" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/unit_edit_shop_item_save_button"
        style="@style/Widget.Design.FloatingActionButton.AtBottom"
        android:layout_gravity="bottom|end"
        android:src="@drawable/ic_check_white_48dp" />

</android.support.design.widget.CoordinatorLayout>